Staff list OK Job list OK Job schedule email WIP

--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/AppJs/templates/jobDetail.html
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/AppJs/templates/jobDetail.html
@@ -1,6 +1,7 @@
-﻿<p>
-    <a class="btn btn-default">Save</a>
-</p>
+﻿<h2>
+    <a href="#/{{param.CostCentre}}"><i class="glyphicon glyphicon-backward"></i></a> 
+    Job Detail <a class="btn btn-default">Save</a>
+</h2>
 
 <div class="well well-sm">
     <div class="form form-inline">
