--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Staff/Index.cshtml
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Staff/Index.cshtml
@@ -2,21 +2,9 @@
     ViewBag.Title = "Staff listing";
 }
 
-<div ng-app="jobApp">
-    <h2 ng-bind="AppTitle">Staff Listing</h2>
-
+<div ng-app="staffApp">
     <div ng-view></div>
 </div>
 
 @section scripts {
-    <script src="~/AppJs/helpers/ajax-helper.js"></script>
-
-    <script src="~/AppJs/staffApp.js"></script>
-
-    <script src="~/AppJs/services/userService.js"></script>
-    <script src="~/AppJs/services/jobService.js"></script>
-    <script src="~/AppJs/services/staffService.js"></script>
-
-    <script src="~/AppJs/controllers/staffDetailCtrl.js"></script>
-    <script src="~/AppJs/controllers/staffListCtrl.js"></script>
 }
