--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Home/Index.cshtml
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>(S)taff (A)llocate +</h1>
-    <p class="lead">Staff Allocate Plus is a convenient and easy to use application for managing staff and job allocation using web platform</p>
+    <p class="lead">Staff Allocate Plus is a web application that provide a convenient and easy method for managing staff and job allocation</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
