--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Shared/_Layout.cshtml
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Shared/_Layout.cshtml
@@ -24,16 +24,22 @@
                 @Html.ActionLink("S Allocate +", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
+                @{
+                    if (User != null && User.IsInRole("Administrator"))
+                    {
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Staffs", "Index", "Staff")</li>
                     <li>@Html.ActionLink("Jobs", "Index", "Job")</li>
-                </ul>
+                </ul>        
+                    }
+                }
 
                 @{
                     if (User != null && User.Identity.IsAuthenticated)
                     {
                         <ul class="nav navbar-nav navbar-right">
+                            <li><a href="@Url.Action("Profile", "Account")">Profile</a></li>
                             <li><a href="@Url.Action("Logout", "Account")">Logout</a></li>
                         </ul>
                     }
@@ -46,9 +52,12 @@
     <div class="container-fluid body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Staff Allocate Plus - Nguyen Tran Nguyen (6586880)</p>
-        </footer>
+        <div class="container">
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Staff Allocate Plus - Nguyen Tran Nguyen (6586880)</p>
+            </footer>
+        </div>
+        
     </div>
     <script src="~/Scripts/lib/angular/angular.min.js"></script>
     <script src="~/Scripts/lib/angular-route/angular-route.min.js"></script>
