--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Account/ResetPassword.cshtml
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Views/Account/ResetPassword.cshtml
@@ -70,7 +70,7 @@
                 }
 
                 // using $http service to create a ajax POST request
-                $http.post('/api/User/ResetPassword', vm.model)
+                $http.post('/api/Staff/ResetPassword', vm.model)
                 .then(function (success) {
                     // navigate to success page
                     window.location.href = '@Url.Action("ResetPasswordSuccess")';
