--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/AppJs/templates/jobList.html
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/AppJs/templates/jobList.html
@@ -4,56 +4,42 @@
 
 <div class="well well-sm">
     <div class="form form-inline">
-        <select class="form-control" ng-model="listFilter.JobCostCentre" ng-options="cc as cc for cc in costCentreList">
+        <select class="form-control" 
+                ng-model="listFilter.JobCostCentre" 
+                ng-options="cc as cc for cc in costCentreList">
             <option value="">Please select</option>
         </select>
-        <a class="btn btn-primary" href="#/{{listFilter.JobCostCentre}}">Show job <i class="glyphicon glyphicon-refresh spin-animate" ng-show="FindWatcher('getJobsForCostCentre').loading"></i></a>
+        <a class="btn btn-primary" href="#/{{listFilter.JobCostCentre}}">Show job 
+            <i class="glyphicon glyphicon-refresh spin-animate"
+               ng-show="FindWatcher('getJobsForCostCentre').loading"></i></a>
 
         <div class="pull-right">
             <button class="btn btn-primary" ng-click="sendEmail()">Send emails</button>
         </div>
-        
     </div>
-    
 </div>
 
 <table class="table wn-table table-clickable">
     <thead>
         <tr>
-            <th style="width:50px">
-                
-            </th>
-            <th>
-                Cost centre
-            </th>
-            <th>
-                BookID
-            </th>
-            <th>
-                Site name
-            </th>
-            <th>
-                Address
-            </th>
-            <th>
-                Job date
-            </th>
-            <th>
-                Job time
-            </th>
-            <th>
-                Staff required
-            </th>
-            <th>
-                Email sent
-            </th>
+            <th style="width:50px"></th>
+            <th>Cost centre</th>
+            <th>BookID</th>
+            <th>Site name</th>
+            <th>Address</th>
+            <th>Job date</th>
+            <th>Job time</th>
+            <th>Staff required</th>
+            <th>Email sent</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
         <tr ng-repeat="job in jobList" ng-class="{'selected':job.selected}">
             <td>
-                <button class="btn" ng-class="job.selected?'btn-primary':'btn-default'" ng-click="job.selected=!job.selected"><i class="fa fa-check" ng-class="{'invisible':!job.selected}"></i></button>
+                <button class="btn" ng-class="job.selected?'btn-primary':'btn-default'" 
+                        ng-click="job.selected=!job.selected"><i class="fa fa-check" 
+                             ng-class="{'invisible':!job.selected}"></i></button>
             </td>
             <td ng-click="job.selected=!job.selected" ng-bind="job.JobCostCentre"></td>
             <td ng-click="job.selected=!job.selected" ng-bind="job.BookID"></td>
@@ -61,17 +47,17 @@
             <td ng-click="job.selected=!job.selected" ng-bind="job.SiteAddress"></td>
             <td ng-click="job.selected=!job.selected" ng-bind="job.JobDate | date"></td>
             <td ng-click="job.selected=!job.selected" ng-bind="job.JobTime | time"></td>
-            <td ng-click="job.selected=!job.selected"><span class="badge" ng-bind="job.StaffRequired"></span></td>
+            <td ng-click="job.selected=!job.selected"><span class="badge" 
+                     ng-bind="job.StaffRequired"></span></td>
             <td>
                 <i class="fa fa-check text-blue" ng-show="job.EmailSent"></i>
                 <i class="fa fa-remove text-red" ng-show="!job.EmailSent"></i>
             </td>
             <td>
-                <a class="btn btn-action btn-default" href="#/edit/{{listFilter.JobCostCentre}}/{{job.BookID}}">Edit</a>
+                <a class="btn btn-action btn-default" 
+                   href="#/edit/{{listFilter.JobCostCentre}}/{{job.BookID}}">Edit</a>
                 <button class="btn btn-action">Send message</button>
             </td>
         </tr>
-
     </tbody>
-
 </table>
