Prepare mobile phone app project for the interview

--- a/dev/SAllocatePlus/SAllocatePlusApp/SAllocateApp/www/templates/jobList.html
+++ b/dev/SAllocatePlus/SAllocatePlusApp/SAllocateApp/www/templates/jobList.html
@@ -1,4 +1,11 @@
 <ion-view view-title="Job list">
+  <ion-nav-buttons side="right">
+    <button class="button button-icon button-clear ion-loop" ng-click="doRefresh()"
+            ng-class="{'spin-animate': FindWatcher('loadNewJobData').loading}"></button>
+  </ion-nav-buttons>
+  <ion-nav-buttons side="left">
+    <button class="button button-icon button-clear ion-navicon" menu-toggle=""></button>
+  </ion-nav-buttons>
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="job in jobList" href="#/app/job/{{job.BookID}}">
