--- a/dev/SAllocatePlus/SAllocatePlusApp/SAllocateApp/www/css/ionic.app.css
+++ b/dev/SAllocatePlus/SAllocatePlusApp/SAllocateApp/www/css/ionic.app.css
@@ -9814,3 +9814,22 @@ a.button {
   opacity: 0;
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
+
+.glyphicon-spin-animate {
+  -animation: spin .7s infinite linear;
+  -ms-animation: spin .7s infinite linear;
+  -webkit-animation: spin .7s infinite linear;
+  -moz-animation: spin .7s infinite linear; }
+
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(360deg); } }
+
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg); } }
+
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
